--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_HorizontalNavbarPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_HorizontalNavbarPartial.cshtml
@@ -51,7 +51,7 @@
             @foreach (var item in Model)
             {
                 <li>
-                    <a class="department-a-tag" href="@Url.Action("ProductCategories", "Products", new { department = item.DepartmentName })">
+                    <a class="department-a-tag" href="@Url.Action("list", "Products", new { department = item.DepartmentName })">
                         @item.DepartmentName
                         @if (item.ProductGroups.Count > 0)
                         {
@@ -69,7 +69,7 @@
                                     {
 
                                         <li>
-                                            <a href="@Url.Action("ProductCategories", "Products", new { productGroup = groupDepartment[i].ProductGroup,department = item.DepartmentName })">
+                                            <a href="@Url.Action("list", "Products", new { group = groupDepartment[i].ProductGroup,department = item.DepartmentName })">
                                                 @groupDepartment[i].ProductGroup
                                                 @if (groupDepartment[i].ProductCategories.Count > 0)
                                                 {
@@ -77,9 +77,9 @@
                                                 }
                                             </a>
                                             <ul class='dropdown2'>
-                                                @foreach (var categories in @groupDepartment[i].ProductCategories)
+                                                @foreach (var categories in groupDepartment[i].ProductCategories)
                                                 {
-                                                    <li><a href="@Url.Action("ProductCategories", "Products", new { SubCategory = categories.ProductCategoryName,productGroup = groupDepartment[i].ProductGroup,department = item.DepartmentName })"> @categories.ProductCategoryName</a> </li>
+                                                    <li><a href="@Url.Action("list", "Products", new { category = categories.ProductCategoryName,group = groupDepartment[i].ProductGroup,department = item.DepartmentName })"> @categories.ProductCategoryName</a> </li>
                                                 }
                                             </ul>
                                         </li>
@@ -90,7 +90,7 @@
                                     {
 
                                         <li>
-                                            <a href="@Url.Action("ProductCategories", "Products", new { productGroup = groupDepartment[i + 1].ProductGroup,department = item.DepartmentName })">
+                                            <a href="@Url.Action("list", "Products", new { group = groupDepartment[i + 1].ProductGroup,department = item.DepartmentName })">
                                                 @groupDepartment[i + 1].ProductGroup
                                                 @if (groupDepartment[i + 1].ProductCategories.Count > 0)
                                                 {
@@ -100,7 +100,7 @@
                                             <ul class='dropdown2'>
                                                 @foreach (var categories in @groupDepartment[i + 1].ProductCategories)
                                                 {
-                                                    <li><a href="@Url.Action("ProductCategories", "Products", new { SubCategory = categories.ProductCategoryName,productGroup = groupDepartment[i + 1].ProductGroup,department = item.DepartmentName })">@categories.ProductCategoryName</a> </li>
+                                                    <li><a href="@Url.Action("list", "Products", new { category = categories.ProductCategoryName,group = groupDepartment[i + 1].ProductGroup,department = item.DepartmentName })">@categories.ProductCategoryName</a> </li>
                                                 }
                                             </ul>
                                         </li>
@@ -110,7 +110,7 @@
                                     {
 
                                         <li>
-                                            <a href="@Url.Action("ProductCategories", "Products", new { productGroup = groupDepartment[i + 2].ProductGroup,department = item.DepartmentName })">
+                                            <a href="@Url.Action("list", "Products", new { group = groupDepartment[i + 2].ProductGroup,department = item.DepartmentName })">
                                                 @groupDepartment[i + 2].ProductGroup
                                                 @if (groupDepartment[i + 2].ProductCategories.Count > 0)
                                                 {
@@ -118,9 +118,9 @@
                                                 }
                                             </a>
                                             <ul class='dropdown2'>
-                                                @foreach (var categories in @groupDepartment[i + 2].ProductCategories)
+                                                @foreach (var categories in groupDepartment[i + 2].ProductCategories)
                                                 {
-                                                    <li><a href="@Url.Action("ProductCategories", "Products", new { SubCategory = categories.ProductCategoryName,productGroup = groupDepartment[i + 2].ProductGroup,department = item.DepartmentName })"> @categories.ProductCategoryName</a> </li>
+                                                    <li><a href="@Url.Action("list", "Products", new { category = categories.ProductCategoryName,group = groupDepartment[i + 2].ProductGroup,department = item.DepartmentName })"> @categories.ProductCategoryName</a> </li>
                                                 }
                                             </ul>
                                         </li>
