--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_SpecialProductPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_SpecialProductPartial.cshtml
@@ -22,18 +22,18 @@
                             <div class="product-thumb1 transition">
                                 <div class="col-xs-12 speciaol-col">
                                     <div class="image">
-                                        <a href="@Url.Action("ProductDetails","Products", new { productId= Model.productMasterList[i].ProductId })">
+                                        <a href="@Url.Action("ProductDetails","Products", new { sku= Model.productMasterList[i].SKUCode })">
                                             <img src="@(!string.IsNullOrEmpty(@Model.productMasterList[i].DefaultImage)? ViewBag.BaseFilePath + @Model.productMasterList[i].DefaultImage : ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")" alt="@Model.productMasterList[i].Name" title="@Model.productMasterList[i].Name" class="img-responsive center-block" />
                                         </a>
                                         <!-- Smartshop Images Start -->
-                                        <a href="@Url.Action("ProductDetails","Products", new { productId= Model.productMasterList[i].ProductId })">
+                                        <a href="@Url.Action("ProductDetails","Products", new { sku= Model.productMasterList[i].SKUCode })">
                                             <img src="@(!string.IsNullOrEmpty(@Model.productMasterList[i].HoverImage)? ViewBag.BaseFilePath + @Model.productMasterList[i].HoverImage : ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")" class="img-responsive second-img" alt="hover image" />
                                         </a>
                                         <!-- Smartshop Images End -->
                                     </div>
                                     <div class="caption">
                                         <h4>
-                                            <a title="@Model.productMasterList[i].Name" href="@Url.Action("ProductDetails","Products", new { productId= Model.productMasterList[i].ProductId })">
+                                            <a title="@Model.productMasterList[i].Name" href="@Url.Action("ProductDetails","Products", new { sku= Model.productMasterList[i].SKUCode })">
                                                 @Model.productMasterList[i].Name
 
                                             </a>
@@ -76,13 +76,13 @@
                             <div class="product-thumb1 transition">
                                 <div class="col-xs-12 speciaol-col">
                                     <div class="image">
-                                        <a href="@Url.Action("ProductDetails","Products", new { productId= Model.productMasterList[i+1].ProductId })"><img src="@(!string.IsNullOrEmpty(Model.productMasterList[i+1].DefaultImage)? ViewBag.BaseFilePath + Model.productMasterList[i+1].DefaultImage : ViewBag.BaseFilePath +"/UploadedFiles/Products/no_image.gif")" alt="@Model.productMasterList[i+1].Name" title="@Model.productMasterList[i+1].Name" class="img-responsive center-block" /></a>
+                                        <a href="@Url.Action("ProductDetails","Products", new { sku= Model.productMasterList[i+1].SKUCode })"><img src="@(!string.IsNullOrEmpty(Model.productMasterList[i+1].DefaultImage)? ViewBag.BaseFilePath + Model.productMasterList[i+1].DefaultImage : ViewBag.BaseFilePath +"/UploadedFiles/Products/no_image.gif")" alt="@Model.productMasterList[i+1].Name" title="@Model.productMasterList[i+1].Name" class="img-responsive center-block" /></a>
                                         <!-- Smartshop Images Start -->
-                                        <a href="@Url.Action("ProductDetails","Products", new { productId= Model.productMasterList[i+1].ProductId })"><img src="@(!string.IsNullOrEmpty(Model.productMasterList[i+1].HoverImage)? ViewBag.BaseFilePath + Model.productMasterList[i+1].HoverImage : ViewBag.BaseFilePath +"/UploadedFiles/Products/no_image.gif")" class="img-responsive second-img" alt="hover image" /></a>
+                                        <a href="@Url.Action("ProductDetails","Products", new { sku= Model.productMasterList[i+1].SKUCode })"><img src="@(!string.IsNullOrEmpty(Model.productMasterList[i+1].HoverImage)? ViewBag.BaseFilePath + Model.productMasterList[i+1].HoverImage : ViewBag.BaseFilePath +"/UploadedFiles/Products/no_image.gif")" class="img-responsive second-img" alt="hover image" /></a>
                                         <!-- Smartshop Images End -->
                                     </div>
                                     <div class="caption">
-                                        <h4><a title="@Model.productMasterList[i + 1].Name" href="@Url.Action("ProductDetails","Products", new { productId= Model.productMasterList[i+1].ProductId })"> @Model.productMasterList[i + 1].Name</a></h4>
+                                        <h4><a title="@Model.productMasterList[i + 1].Name" href="@Url.Action("ProductDetails","Products", new { sku= Model.productMasterList[i+1].SKUCode })"> @Model.productMasterList[i + 1].Name</a></h4>
                                         <p class="price">
                                             @Model.CurrencySign @Model.productMasterList[i + 1].SellPrice
                                         </p>
@@ -121,13 +121,13 @@
                             <div class="product-thumb1 transition">
                                 <div class="col-xs-12 speciaol-col">
                                     <div class="image">
-                                        <a href="@Url.Action("ProductDetails","Products", new { productId= Model.productMasterList[i+2].ProductId })"><img src="@(!string.IsNullOrEmpty(Model.productMasterList[i+1].DefaultImage)? ViewBag.BaseFilePath + Model.productMasterList[i+1].DefaultImage : ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")" alt="@Model.productMasterList[i + 2].Name" title="@Model.productMasterList[i + 2].Name" class="img-responsive center-block" /></a>
+                                        <a href="@Url.Action("ProductDetails","Products", new { sku= Model.productMasterList[i+2].SKUCode })"><img src="@(!string.IsNullOrEmpty(Model.productMasterList[i+1].DefaultImage)? ViewBag.BaseFilePath + Model.productMasterList[i+1].DefaultImage : ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")" alt="@Model.productMasterList[i + 2].Name" title="@Model.productMasterList[i + 2].Name" class="img-responsive center-block" /></a>
                                         <!-- Smartshop Images Start -->
-                                        <a href="@Url.Action("ProductDetails","Products", new { productId= Model.productMasterList[i+2].ProductId })"><img src="@(!string.IsNullOrEmpty(Model.productMasterList[i+1].HoverImage)? ViewBag.BaseFilePath + Model.productMasterList[i+1].HoverImage : ViewBag.BaseFilePath +"/UploadedFiles/Products/no_image.gif")" class="img-responsive second-img" alt="hover image" /></a>
+                                        <a href="@Url.Action("ProductDetails","Products", new { sku= Model.productMasterList[i+2].SKUCode })"><img src="@(!string.IsNullOrEmpty(Model.productMasterList[i+1].HoverImage)? ViewBag.BaseFilePath + Model.productMasterList[i+1].HoverImage : ViewBag.BaseFilePath +"/UploadedFiles/Products/no_image.gif")" class="img-responsive second-img" alt="hover image" /></a>
                                         <!-- Smartshop Images End -->
                                     </div>
                                     <div class="caption">
-                                        <h4><a title="@Model.productMasterList[i + 2].Name" href="@Url.Action("ProductDetails","Products", new { productId= Model.productMasterList[i+2].ProductId })">@Model.productMasterList[i + 2].Name</a></h4>
+                                        <h4><a title="@Model.productMasterList[i + 2].Name" href="@Url.Action("ProductDetails","Products", new { sku= Model.productMasterList[i+2].SKUCode })">@Model.productMasterList[i + 2].Name</a></h4>
                                         <p class="price">
                                             @Model.CurrencySign@Model.productMasterList[i + 2].SellPrice
                                         </p>
