--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_TopCategoryProductsPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_TopCategoryProductsPartial.cshtml
@@ -11,7 +11,7 @@
             <div class="product-layout">
                 <div class="product-thumb transition">
                     <div class="image">
-                        <a href="@Url.Action("ProductDetails","Products", new {productId = item.ProductId})"><img src="@(!string.IsNullOrEmpty(item.DefaultImage) ? ViewBag.BaseFilePath + item.DefaultImage : ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")" alt="@item.Name" class="img-responsive center-block" /></a>
+                        <a href="@Url.Action("ProductDetails","Products", new {sku = item.SKUCode})"><img src="@(!string.IsNullOrEmpty(item.DefaultImage) ? ViewBag.BaseFilePath + item.DefaultImage : ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")" alt="@item.Name" class="img-responsive center-block" /></a>
                         <div class="topbutton">
                             <button type="button" data-toggle="tooltip" title="Add to Wish List">
                                 <svg width="20px" height="20px">
@@ -29,7 +29,7 @@
                         </div>
                     </div>
                     <div class="cat-caption">
-                        <h4><a title="@item.Name" href="@Url.Action("_GetProductByGroupsAndDepartment","Home", new { productgroupId= item.ProductGroup })">@item.Name</a></h4>
+                        <h4><a title="@item.Name" href="@Url.Action("list","Products", new { group= item.ProductGroup.ProductGroup,department=item.TenantDepartment.DepartmentName })">@item.Name</a></h4>
                         <div class="rating pull-left">
                             <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-2x"></i></span>
                             <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-2x"></i></span>
