--- a/WarehouseEcommerce/Areas/Shop/Views/Products/list.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Products/list.cshtml
@@ -22,52 +22,54 @@
         @Html.Hidden("valuesParameter", (string)values)
         @Html.Action("_DynamicFilters", new { department = ViewBag.departmentId, groups = ViewBag.groupId, SubCategory = ViewBag.subcategory })
         <div id="content" class="col-md-9 col-sm-12">
-            @if (Model != null)
-            {
-                foreach (var item in Model)
+            <ul class="breadcrumb">
+                <li><a href="/shop">Home</a></li>
+                @if (ViewBag.departmentId != null)
                 {
-                    <ul class="breadcrumb">
-                        <li><a href="/shop">Home</a></li>
-                        @if (!string.IsNullOrEmpty(item?.TenantDepartment?.DepartmentName))
+                    <li><a href="@Url.Action("list","Products",new { department = ViewBag.departmentId})">@ViewBag.departmentId </a></li>
+                }
+
+
+
+
+                @*@if (!string.IsNullOrEmpty(item?.TenantDepartment?.DepartmentName))
+                    {
+                        if (Url.Action() == Url.Action("list", "Products", new { department = @item.TenantDepartment.DepartmentName }))
                         {
-                            if (Url.Action() == Url.Action("list", "Products", new { department = @item.TenantDepartment.DepartmentName }))
+                            <li>@(!string.IsNullOrEmpty(item?.TenantDepartment?.DepartmentName) ? item.TenantDepartment.DepartmentName : "")</li>
+                        }
+                        else
+                        {
+                            if (!string.IsNullOrEmpty(item?.ProductGroup?.ProductGroup))
                             {
-                                <li>@(!string.IsNullOrEmpty(item?.TenantDepartment?.DepartmentName) ? item.TenantDepartment.DepartmentName : "")</li>
-                            }
-                            else
-                            {
-                                if (!string.IsNullOrEmpty(item?.ProductGroup?.ProductGroup))
+                                if (Url.Action() == Url.Action("list", "Products", new { group = @item.ProductGroup.ProductGroup }))
                                 {
-                                    if (Url.Action() == Url.Action("list", "Products", new { group = @item.ProductGroup.ProductGroup }))
+                                    <li><a href="@Url.Action("list", "Products", new { department = @item.TenantDepartment.DepartmentName})">@(!string.IsNullOrEmpty(item?.TenantDepartment?.DepartmentName) ? item.TenantDepartment.DepartmentName : "")</a></li>
+                                    <li>@(!string.IsNullOrEmpty(item?.ProductGroup?.ProductGroup) ? item.ProductGroup.ProductGroup : "")</li>
+                                }
+                                else
+                                {
+                                    if (Url.Action() == Url.Action("ProductDetails", "Products", new { sku = @item.SKUCode }))
                                     {
-                                        <li><a href="@Url.Action("list", "Products", new { department = @item.TenantDepartment.DepartmentName})">@(!string.IsNullOrEmpty(item?.TenantDepartment?.DepartmentName) ? item.TenantDepartment.DepartmentName : "")</a></li>
-                                        <li>@(!string.IsNullOrEmpty(item?.ProductGroup?.ProductGroup) ? item.ProductGroup.ProductGroup : "")</li>
+                                        if (!string.IsNullOrEmpty(item?.ProductCategory?.ProductCategoryName))
+                                        {
+                                            <li>@(!string.IsNullOrEmpty(item?.ProductCategory?.ProductCategoryName) ? item.ProductCategory.ProductCategoryName : "")</li>
+                                        }
                                     }
                                     else
                                     {
-                                        if (Url.Action() == Url.Action("ProductDetails", "Products", new { sku = @item.SKUCode }))
-                                        {
-                                            if (!string.IsNullOrEmpty(item?.ProductCategory?.ProductCategoryName))
-                                            {
-                                                <li>@(!string.IsNullOrEmpty(item?.ProductCategory?.ProductCategoryName) ? item.ProductCategory.ProductCategoryName : "")</li>
-                                            }
-                                        }
-                                        else
-                                        {
-                                            <li><a href="@Url.Action("list", "Products", new { department = @item.TenantDepartment.DepartmentName})">@(!string.IsNullOrEmpty(item?.TenantDepartment?.DepartmentName) ? item.TenantDepartment.DepartmentName : "")</a></li>
-                                            <li><a href="@Url.Action("list", "Products", new { productGroup = @item.ProductGroup.ProductGroup})">@(!string.IsNullOrEmpty(item?.ProductGroup?.ProductGroup) ? item.ProductGroup.ProductGroup : "")</a></li>
-                                            <li>@(!string.IsNullOrEmpty(item?.ProductCategory?.ProductCategoryName) ? item.ProductCategory.ProductCategoryName : "")</li>
-                                        }
+                                        <li><a href="@Url.Action("list", "Products", new { department = @item.TenantDepartment.DepartmentName})">@(!string.IsNullOrEmpty(item?.TenantDepartment?.DepartmentName) ? item.TenantDepartment.DepartmentName : "")</a></li>
+                                        <li><a href="@Url.Action("list", "Products", new { productGroup = @item.ProductGroup.ProductGroup})">@(!string.IsNullOrEmpty(item?.ProductGroup?.ProductGroup) ? item.ProductGroup.ProductGroup : "")</a></li>
+                                        <li>@(!string.IsNullOrEmpty(item?.ProductCategory?.ProductCategoryName) ? item.ProductCategory.ProductCategoryName : "")</li>
                                     }
                                 }
                             }
                         }
+                    }*@
 
 
-                    </ul>
-                    break;
-                }
-            }
+            </ul>
+
             <div class="row cate-border">
                 <div class="col-md-2 col-sm-3 col-xs-5">
                     <div class="btn-group-sm">
