--- a/WarehouseEcommerce/Areas/Shop/Content/bootstrap.css
+++ b/WarehouseEcommerce/Areas/Shop/Content/bootstrap.css
@@ -5329,16 +5329,19 @@ a.thumbnail.active {
   margin-bottom: 20px;
 }
 .list-group-item {
-  position: relative;
-  display: block;
-  padding: 10px 15px;
-  margin-bottom: -1px;
-  background-color: #fff;
-  border: 1px solid #ddd;
+    position: relative;
+    display: block;
+    padding: 10px 15px;
+    margin-bottom: -1px;
+    background-color: #fff;
+    border: 1px solid #ddd;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
+
 .list-group-item:first-child {
-  border-top-left-radius: 4px;
-  border-top-right-radius: 4px;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
 }
 .list-group-item:last-child {
   margin-bottom: 0;
