--- a/WarehouseEcommerce/Areas/Shop/Views/Products/ProductDetails.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Products/ProductDetails.cshtml
@@ -16,12 +16,12 @@
                 {
                     if (!string.IsNullOrEmpty(Model?.ProductGroup?.ProductGroup))
                     {
-                        <li><a href="@Url.Action("list", "Products", new { group = Model.ProductGroup.ProductGroup})">@(!string.IsNullOrEmpty(Model?.ProductGroup?.ProductGroup) ? Model.ProductGroup.ProductGroup : "")</a></li>
+                        <li><a href="@Url.Action("list", "Products", new { group = Model.ProductGroup.ProductGroup, department = Model.TenantDepartment.DepartmentName})">@(!string.IsNullOrEmpty(Model?.ProductGroup?.ProductGroup) ? Model.ProductGroup.ProductGroup : "")</a></li>
                     }
                 }
                 @if (!string.IsNullOrEmpty(Model?.ProductCategory?.ProductCategoryName))
                 {
-                    <li><a href="@Url.Action("list", "Products", new { category = Model.ProductCategory.ProductCategoryName })">@(!string.IsNullOrEmpty(Model?.ProductCategory?.ProductCategoryName) ? Model.ProductCategory.ProductCategoryName : "")</a></li>
+                    <li><a href="@Url.Action("list", "Products", new { category = Model.ProductCategory.ProductCategoryName, group = Model.ProductGroup.ProductGroup, department = Model.TenantDepartment.DepartmentName })">@(!string.IsNullOrEmpty(Model?.ProductCategory?.ProductCategoryName) ? Model.ProductCategory.ProductCategoryName : "")</a></li>
                 }
 
                 <li>@Model.Name</li>
