--- a/WarehouseEcommerce/Areas/Shop/Views/Products/list.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Products/list.cshtml
@@ -24,49 +24,21 @@
         <div id="content" class="col-md-9 col-sm-12">
             <ul class="breadcrumb">
                 <li><a href="/shop">Home</a></li>
-                @if (ViewBag.departmentId != null)
+                @if (ViewBag.departmentId != null && ViewBag.groupId != null && !string.IsNullOrWhiteSpace(ViewBag.subcategory)) 
                 {
                     <li><a href="@Url.Action("list","Products",new { department = ViewBag.departmentId})">@ViewBag.departmentId </a></li>
+                    <li><a href="@Url.Action("list","Products",new { group = ViewBag.groupId, department = ViewBag.departmentId})">@ViewBag.groupId </a></li>
+                    <li>@ViewBag.subcategory</li>
                 }
-
-
-
-
-                @*@if (!string.IsNullOrEmpty(item?.TenantDepartment?.DepartmentName))
-                    {
-                        if (Url.Action() == Url.Action("list", "Products", new { department = @item.TenantDepartment.DepartmentName }))
-                        {
-                            <li>@(!string.IsNullOrEmpty(item?.TenantDepartment?.DepartmentName) ? item.TenantDepartment.DepartmentName : "")</li>
-                        }
-                        else
-                        {
-                            if (!string.IsNullOrEmpty(item?.ProductGroup?.ProductGroup))
-                            {
-                                if (Url.Action() == Url.Action("list", "Products", new { group = @item.ProductGroup.ProductGroup }))
-                                {
-                                    <li><a href="@Url.Action("list", "Products", new { department = @item.TenantDepartment.DepartmentName})">@(!string.IsNullOrEmpty(item?.TenantDepartment?.DepartmentName) ? item.TenantDepartment.DepartmentName : "")</a></li>
-                                    <li>@(!string.IsNullOrEmpty(item?.ProductGroup?.ProductGroup) ? item.ProductGroup.ProductGroup : "")</li>
-                                }
-                                else
-                                {
-                                    if (Url.Action() == Url.Action("ProductDetails", "Products", new { sku = @item.SKUCode }))
-                                    {
-                                        if (!string.IsNullOrEmpty(item?.ProductCategory?.ProductCategoryName))
-                                        {
-                                            <li>@(!string.IsNullOrEmpty(item?.ProductCategory?.ProductCategoryName) ? item.ProductCategory.ProductCategoryName : "")</li>
-                                        }
-                                    }
-                                    else
-                                    {
-                                        <li><a href="@Url.Action("list", "Products", new { department = @item.TenantDepartment.DepartmentName})">@(!string.IsNullOrEmpty(item?.TenantDepartment?.DepartmentName) ? item.TenantDepartment.DepartmentName : "")</a></li>
-                                        <li><a href="@Url.Action("list", "Products", new { productGroup = @item.ProductGroup.ProductGroup})">@(!string.IsNullOrEmpty(item?.ProductGroup?.ProductGroup) ? item.ProductGroup.ProductGroup : "")</a></li>
-                                        <li>@(!string.IsNullOrEmpty(item?.ProductCategory?.ProductCategoryName) ? item.ProductCategory.ProductCategoryName : "")</li>
-                                    }
-                                }
-                            }
-                        }
-                    }*@
-
+                else if (ViewBag.departmentId != null && ViewBag.groupId != null)
+                {
+                    <li><a href="@Url.Action("list","Products",new { department = ViewBag.departmentId})">@ViewBag.departmentId </a></li>
+                    <li>@ViewBag.groupId</li>
+                }
+                else if (ViewBag.departmentId != null)
+                {
+                    <li>@ViewBag.departmentId</li>
+                }
 
             </ul>
 
